# ai-engineering-study

./: .gitignore  README.md  test.txt
phases/phase0/: Phase0-总结.md
phases/phase0/lesson1-环境布置/: prompt-env-check.md  环境布置文档.md
phases/phase0/lesson2-git/: Lesson2-总结.md
phases/phase0/lesson3-gpu/: Lesson3-总结.md  benchmark.py
phases/phase0/lesson4-api/: Lesson4-总结.md  prompt-api-troubleshooter.md  test_deepseek.py  test_raw_http.py
phases/phase0/lesson5-notebook/: Lesson5-总结.md  lesson5-exercises.ipynb  prompt-notebook-helper.md
phases/phase0/lesson6-env/: Lesson6-总结.md  main.py  pyproject.toml
